@@ -41,7 +41,19 @@ events {
 http {
     log_format debug '[$time_local] $msec  "$request" $status conn=$connection sent=$bytes_sent body_sent=$body_bytes_sent';
     include '<%= PhusionPassenger.resources_dir %>/mime.types';
-    passenger_ruby <%= PlatformInfo.ruby_command %>;
+    
+    <% if @options[:ruby] %>
+    	passenger_ruby <%= @options[:ruby] %>;
+    <% else %>
+    	passenger_ruby <%= PlatformInfo.ruby_command %>;
+    <% end %>
+    <% if @options[:nodejs] %>
+    	passenger_nodejs <%= @options[:nodejs] %>;
+    <% end %>
+    <% if @options[:python] %>
+    	passenger_python <%= @options[:python] %>;
+    <% end %>
+    
     passenger_root '<%= PhusionPassenger.install_spec %>';
     passenger_abort_on_startup_error on;
     passenger_ctl cleanup_pidfiles <%= serialize_strset("#{@working_dir}/temp_dir_toucher.pid") %>;
